# pao-lab

./: .gitignore  README.md
Distance/Distance/: CMakeLists.txt  main.cpp
Distance/DistanceSIMD/: CMakeLists.txt  main.cpp
Distance/DistanceSIMDOpenMP/: CMakeLists.txt  main.cpp
Encryption/AES/: AES.cpp  AES.hpp  CMakeLists.txt  main.cpp
Encryption/TDES/: DES.cpp  DES.hpp  TDES.cpp  TDES.hpp  main.cpp
GPU/MatrixMultiply/: CMakeLists.txt  main.cpp  multiply.cl
GPU/OpenCL/: CMakeLists.txt  main.cpp
GPU/OpenCLDemo/: CMakeLists.txt  add.cl  main.cpp
GPU/SAD/: CMakeLists.txt  main.cpp  sad.cl
GPU/SSD/: CMakeLists.txt  main.cpp  ssd.cl
Nikon/NikonASM.X/: main.s
Nikon/NikonASM.X/nbproject/: configurations.xml  project.xml
Nikon/NikonC-Delay.X/: main.c
Nikon/NikonC-Delay.X/nbproject/: configurations.xml  project.xml
Nikon/NikonC.X/: main.c
Nikon/NikonC.X/nbproject/: configurations.xml  project.xml
Reverse/: README.md
Reverse/ReverseLUT/: CMakeLists.txt  main.cpp
Reverse/ReverseLUTOpenMP/: CMakeLists.txt  main.cpp
Reverse/ReverseLUTThreaded/: CMakeLists.txt  main.cpp
Reverse/ReverseNaive/: CMakeLists.txt  main.cpp
Reverse/ReverseNaiveThreaded/: CMakeLists.txt  main.cpp
Reverse/ReverseOpenMP/: CMakeLists.txt  main.cpp
Reverse/ReverseSingleLUT/: CMakeLists.txt  lut_types.h  main.cpp
Reverse/ReverseSingleLUTOpenMP/: CMakeLists.txt  main.cpp
Reverse/ReverseSingleLUTThreaded/: CMakeLists.txt  lut_types.h  main.cpp
Reverse/ReverseThreaded/: CMakeLists.txt  main.cpp
ReverseLUT/: CMakeLists.txt
ReverseNaive/: CMakeLists.txt  main.cpp
ReverseSingleLUT/: CMakeLists.txt  main.cpp
TDES/: CMakeLists.txt  DES.cpp  DES.hpp  TDES.cpp  TDES.hpp  main.cpp
